[project]
name = "makerrepo-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
makerrepo-cli = "makerrepo_cli.cmds.main:cli"
mr = "makerrepo_cli.cmds.main:cli"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "websockets>=13.1",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mr = ["data/*"]
