[project]
name = "makerrepo-cli"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "makerrepo>=0.4.3",
    "ocp-vscode>=3.0.1",
    "playwright>=1.58.0",
    "questionary>=2.1.0",
    "rich>=13.0.0",
]

[project.scripts]
makerrepo-cli = "makerrepo_cli.cmds.main:cli"
mr = "makerrepo_cli.cmds.main:cli"

[dependency-groups]
dev = [
    "bd-warehouse>=0.2.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest>=9.0.2",
    "websockets>=13.1",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
makerrepo_cli = ["data/*"]
